profile switcher: allow numpad enter for button activations

BUG=646331

Review-Url: https://codereview.chromium.org/2355703004
Cr-Commit-Position: refs/heads/master@{#420030}

Former-commit-id: 1aaa76992d247f75a8298f27989dfd43ae9eda26